src/objects/Apttus_Config2__ConfigCustomClasses__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Used to register.custom classes that Implement Global interfaces exposed by Apttus for customization.</description>
    <fields>
        <fullName>Apttus_Config2__ActionCallbackClass__c</fullName>
        <description>The Action callback class name. The class should implement the CustomClass.IActionCallback3 interface.</description>
        <inlineHelpText>The Action callback class name. The class should implement the CustomClass.IActionCallback3 interface.</inlineHelpText>
        <label>Action Callback Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ActionInvokerCallbackClass__c</fullName>
        <description>The action invoker callback class name. The class should implement the CustomClass.IActionInvokerCallback interface.</description>
        <inlineHelpText>The action invoker callback class name. The class should implement the CustomClass.IActionInvokerCallback interface.</inlineHelpText>
        <label>Action Invoker Callback Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ActionParamsCallbackClass__c</fullName>
        <description>The action parameters callback class name. The class should implement the CustomClass.IActionParamsCallback interface.</description>
        <inlineHelpText>The action parameters callback class name. The class should implement the CustomClass.IActionParamsCallback interface.</inlineHelpText>
        <label>Action Params Callback Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AdjustmentLineItemCallbackClass__c</fullName>
        <description>The adjustment line item callback class name. The class should implement the CustomClass.IAdjustmentLineItemCallback interface.</description>
        <inlineHelpText>The adjustment line item callback class name. The class should implement the CustomClass.IAdjustmentLineItemCallback interface.</inlineHelpText>
        <label>Adjustment Line Item Callback Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AdvancedApprovalCallbackClass__c</fullName>
        <description>The advanced approval callback class name. The class should implement the CustomClass.IAdvancedApprovalCallback interface.</description>
        <inlineHelpText>The advanced approval callback class name. The class should implement the CustomClass.IAdvancedApprovalCallback interface.</inlineHelpText>
        <label>Advanced Approval Callback Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AssetLineItemCallbackClass__c</fullName>
        <description>The asset line item callback class name. The class should implement the CustomClass.IAssetLineItemCallback2 interface.</description>
        <inlineHelpText>The asset line item callback class name. The class should implement the CustomClass.IAssetLineItemCallback2 interface.</inlineHelpText>
        <label>Asset Line Item Callback Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AssetRenewalCustomCallbackClass__c</fullName>
        <description>The asset renewal custom callback class name. The class should implement the CustomClass.IAssetRenewalCustomCallback interface.</description>
        <inlineHelpText>The asset renewal custom callback class name. The class should implement the CustomClass.IAssetRenewalCustomCallback interface.</inlineHelpText>
        <label>Asset Renewal Custom Callback Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CartApprovalCallbackClass__c</fullName>
        <description>The cart approval callback class name. The class should implement the CustomClass.ICartApprovalCallback2 interface.</description>
        <inlineHelpText>The cart approval callback class name. The class should implement the CustomClass.ICartApprovalCallback2 interface.</inlineHelpText>
        <label>Cart Approval Callback Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__DealOptimizerCallbackClass__c</fullName>
        <description>The deal optimizer callback class name. The class should implement the CustomClass.IDealOptimizerCallback2 interface.</description>
        <inlineHelpText>The deal optimizer callback class name. The class should implement the CustomClass.IDealOptimizerCallback2 interface.</inlineHelpText>
        <label>Deal Optimizer Callback Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__DisplayActionCallbackCalss__c</fullName>
        <description>The display action callback class name. The class should implement the CustomClass.IDisplayActionCallback interface.</description>
        <inlineHelpText>The display action callback class name. The class should implement the CustomClass.IDisplayActionCallback interface.</inlineHelpText>
        <label>Display Action Callback Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__FormulaCallbackClass__c</fullName>
        <description>The formula callback class name. The class should implement the CustomClass.IFormulaCallback interface.</description>
        <inlineHelpText>The formula callback class name. The class should implement the CustomClass.IFormulaCallback interface.</inlineHelpText>
        <label>Formula Callback Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__LoyaltyPointCallbackClass__c</fullName>
        <description>The loyalty point callback class name. The class should implement the CustomClass.ILoyaltyPointCallback interface.</description>
        <inlineHelpText>The loyalty point callback class name. The class should implement the CustomClass.ILoyaltyPointCallback interface.</inlineHelpText>
        <label>Loyalty Point Callback Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__MetadataCallbackClass__c</fullName>
        <description>The metadata callback class name. The class should implement the CustomClass.IMetadataCallback interface.</description>
        <inlineHelpText>The metadata callback class name. The class should implement the CustomClass.IMetadataCallback interface.</inlineHelpText>
        <label>Metadata Callback Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PricingCallbackClass__c</fullName>
        <description>The pricing callback class name. The class should implement the CustomClass.IPricingCallback2 interface.</description>
        <inlineHelpText>The pricing callback class name. The class should implement the CustomClass.IPricingCallback2 interface.</inlineHelpText>
        <label>Pricing Callback Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductAttributeCallbackClass__c</fullName>
        <description>The product attribute callback class name. The class should implement the CustomClass.IProductAttributeCallback interface.</description>
        <inlineHelpText>The product attribute callback class name. The class should implement the CustomClass.IProductAttributeCallback interface.</inlineHelpText>
        <label>Product Attribute Callback Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductFilterCallbackClass__c</fullName>
        <description>The product filter callback class name. The class should implement the CustomClass.IProductFilterCallback interface.</description>
        <inlineHelpText>The product filter callback class name. The class should implement the CustomClass.IProductFilterCallback interface.</inlineHelpText>
        <label>Product Filter Callback Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RecommendationCallbackClass__c</fullName>
        <description>The recommendation callback class name. The class should implement the CustomClass.IRecommendationCallback interface.</description>
        <inlineHelpText>The recommendation callback class name. The class should implement the CustomClass.IRecommendationCallback interface.</inlineHelpText>
        <label>Recommendation Callback Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RelatedPricingCallbackClass__c</fullName>
        <description>The related pricing callback class name. The class should implement the CustomClass.IRelatedPricingCallback interface.</description>
        <inlineHelpText>The related pricing callback class name. The class should implement the CustomClass.IRelatedPricingCallback interface.</inlineHelpText>
        <label>Related Pricing Callback Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ShippingCallbackClass__c</fullName>
        <description>The shipping callback class name. The class should implement the CustomClass.IShippingCallback interface.</description>
        <inlineHelpText>The shipping callback class name. The class should implement the CustomClass.IShippingCallback interface.</inlineHelpText>
        <label>Shipping Callback Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__TaxCallbackClass__c</fullName>
        <description>The tax callback class name. The class should implement the CustomClass.ITaxCallback interface.</description>
        <inlineHelpText>The tax callback class name. The class should implement the CustomClass.ITaxCallback interface.</inlineHelpText>
        <label>Tax Callback Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ValidationCallbackClass__c</fullName>
        <description>The validation callback class name. The class should implement the CustomClass.IValidationCallback interface.</description>
        <inlineHelpText>The validation callback class name. The class should implement the CustomClass.IValidationCallback interface.</inlineHelpText>
        <label>Validation Callback Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Config Custom Classes</label>
</CustomObject>